# StreamCherry

./: .env  .gitignore  README.md  docker-compose.yml  makefile  package-lock.json  package.json
Androidapp/: settings.gradle.kts
Androidapp/app/: build.gradle.kts
Androidapp/gradle/: libs.versions.toml
TCPServer/: CMakeLists.txt  Dockerfile  makefile
TCPServer/src/: CmdProcessor.cpp  CmdProcessor.h  main.cpp
TCPServer/src/commands/: DeleteCommand.cpp  DeleteCommand.h  GetCommand.cpp  GetCommand.h  HelpCommand.cpp  HelpCommand.h  PatchCommand.cpp  PatchCommand.h  PostCommand.cpp  PostCommand.h
TCPServer/src/interfaces/: Executable.h  ICommand.h  IWatchList.h  Runnable.h
TCPServer/src/models/: WatchList.cpp  WatchList.h
TCPServer/src/server/: ClientHandler.cpp  ClientHandler.h  TCPServer.cpp  TCPServer.h  ThreadPool.cpp  ThreadPool.h
Web/my-app/: .env  Dockerfile  package-lock.json  package.json
WebServer/: Dockerfile  api_requests.rest  package-lock.json  package.json  server.js
WebServer/config/: .env.local
WebServer/controllers/: categoryController.js  movieController.js  recommendationController.js  tokensController.js  userController.js
WebServer/models/: Category.js  Movie.js  User.js
WebServer/repositories/: categoryRepository.js  movieRepository.js  recommendationRepository.js  tokensRepository.js  userRepository.js
WebServer/routes/: categoryRoutes.js  movieRoutes.js  tokensRoutes.js  userRoutes.js
WebServer/services/: categoryService.js  (+4 more)
Wiki/: Android-Guide.md  AndroidExamples.md  README.md  RunningApp.md  Web-Guide.md
(+233 files in other folders)
